--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,7 @@
     <strong>We're sorry but goodlearning_ui doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
-  <div id="app"></div>
-  <div id="app"></div>
+  <div id="app" data-app="true"></div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -40,8 +39,8 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/563430b828.js" crossorigin="anonymous"></script>
   <!-- Required scripts -->
-  <script src="https://unpkg.com/vue-agile"></script>
+  <script src="https://unpkg.com/vue-agile"></script>  <script src="http://cdn.ckeditor.com/4.6.2/standard-all/ckeditor.js"></script>
+
 
 </body>
-
 </html>
