--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <!-- Required scripts -->
   
   <script src="http://cdn.ckeditor.com/4.6.2/standard-all/ckeditor.js"></script>
-
+  <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>
 </body>
 
 </html>
