--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,14 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/563430b828.js" crossorigin="anonymous"></script>
   <!-- Required scripts -->
-  
-  <script src="http://cdn.ckeditor.com/4.6.2/standard-all/ckeditor.js"></script>
   <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>
+  <!-- Video.js base CSS -->
+<link
+href="https://unpkg.com/video.js@7/dist/video-js.min.css"
+rel="stylesheet"
+/>
+<!-- City -->
+<link href="https://unpkg.com/@videojs/themes@1/dist/city/index.css" rel="stylesheet" />
 </body>
 
 </html>
