--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-
+<!--  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+-->
 </head>
 
 <body>
@@ -37,8 +37,8 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/563430b828.js" crossorigin="anonymous"></script>
-  <!-- Required scripts -->
-  <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>
+  <!-- Required scripts <script src="https://code.iconify.design/1/1.0.5/iconify.min.js"></script>-->
+  
   <!-- Video.js base CSS -->
 <link
 href="https://unpkg.com/video.js@7/dist/video-js.min.css"
